<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <!--Imagen de contacto-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Imagen_c_Item"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagen_contacto"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <!--Id de contacto-->
            <TextView
                android:id="@+id/Id_c_Item"
                android:text="@string/Id_c_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

            <!--Uid del usuario-->
            <TextView
                android:id="@+id/Uid_c_Item"
                android:text="@string/Uid_c_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

            <!--Nombres de contacto-->
            <TextView
                android:id="@+id/nombres_c_Item"
                android:text="@string/nombres_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/opensans"/>

            <!--Apellidos de contacto-->
            <TextView
                android:id="@+id/apellidos_c_Item"
                android:text="@string/apellidos_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

            <!--Correo de contacto-->
            <TextView
                android:id="@+id/correo_c_Item"
                android:text="@string/correo_c_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center"
                android:fontFamily="@font/opensans"/>

            <!--Teléfono de contacto-->
            <TextView
                android:id="@+id/telefono_c_Item"
                android:text="@string/telefono_c_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

            <!--Edad de contacto-->
            <TextView
                android:id="@+id/edad_c_Item"
                android:text="@string/edad_c_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

            <!--Dirección del contacto-->
            <TextView
                android:id="@+id/direccion_c_Item"
                android:text="@string/direccion_c_Item"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/opensans"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>