<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AgregarNotas.AgregarNota">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            tools:ignore="MissingConstraints"
            tools:ingnore="MissingConstrains"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/UidUsuario"
                android:hint="@string/Uid_Usuario"
                android:textSize="18sp"
                android:visibility="gone"
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoUsuario"
                android:hint="@string/Correo_usuario"
                android:textSize="18sp"
                android:visibility="gone"
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/Titulo"
                android:hint="@string/Titulo"
                android:textSize="25sp"
                android:textColorHint="@color/black600"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:src="@drawable/icon_time"
                    android:layout_marginStart="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:text="@string/Fecha_hora_actual_Txt"
                    android:textSize="20sp"
                    android:textColor="@color/black500"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/opensans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/FechaActual"
                    android:hint="@string/Fecha_hora_actual"
                    android:textSize="18sp"
                    android:textColor="@color/black700"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/opensans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <EditText
                android:id="@+id/Descripcion"
                android:hint="@string/Descripcion"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:minHeight="400dp"
                android:padding="10dp"
                android:gravity="start"
                android:fontFamily="@font/opensans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Btn_Calendario"
                    android:text="@string/Btn_Calendario"
                    android:backgroundTint="@color/red400"
                    app:icon="@drawable/icon_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/Fecha"
                    android:hint="@string/Fecha"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/opensans"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/Estado"
                android:text="@string/Estado"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>