<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:text="@string/ElijaOpcionTXT"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/opensans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="book.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <Button
        android:id="@+id/CD_Eliminar"
        android:text="@string/CD_Eliminar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icon_delete"
        android:fontFamily="@font/opensans"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/CD_Actualizar"
        android:text="@string/CD_Actualizar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icon_editar"
        android:fontFamily="@font/opensans"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

</LinearLayout>